Added database for swing_songs

--- a/templates/swing.html
+++ b/templates/swing.html
@@ -11,5 +11,5 @@
         Is it possible to have the list of songs act as links to the sheet music?
     </div>
 
-    <h1> Add an peice of music </h1>
+    <h1> Add a peice of music </h1>
 {% endblock %}
