Trying to get the url_creator to work. Also trying to find a way to use a smaller number of databases.

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
 <div class="dropdown">
   <button class="dropbtn">Jazz</button>
   <div class="dropdown-content">
-    <a href="/swing">Swing</a>
+    <a href="/swing_index">Swing</a>
     <a href="#">Bebop</a>
     <a href="#">Big Band</a>
     <a href="#">Django</a>
