Reformatted my data structure, trying to get my show and delete working

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,15 +92,17 @@
 </style>
 <body>
 
+<!-- JAZZ -->
+
 <div class="dropdown">
   <button class="dropbtn">Jazz</button>
   <div class="dropdown-content">
-    <a href="/swing_index">Swing</a>
-    <a href="#">Bebop</a>
-    <a href="#">Big Band</a>
-    <a href="#">Django</a>
-    <a href="#">Latin</a>
-    <a href="#">Dixieland</a>
+    <a href="/list/swing">Swing</a>
+    <a href="/list/bebop">Bebop</a>
+    <a href="/list/big_band">Big Band</a>
+    <a href="/list/django">Django</a>
+    <a href="/list/latin">Latin</a>
+    <a href="/list/dixieland">Dixieland</a>
 
   </div>
 </div>
@@ -144,16 +146,19 @@
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 </style>
+
+<!-- Classical -->
+
 <body>
 <div class="dropdown">
   <button class="dropbtn">Classical</button>
   <div class="dropdown-content">
-    <a href="#">Baroque</a>
-    <a href="#">Modern Composition</a>
-    <a href="#">Opera</a>
-    <a href="#">Romantic</a>
-    <a href="#">Impressionist</a>
-    <a href="#">Minimalism</a>
+    <a href="/list/baroque">Baroque</a>
+    <a href="/list/modern_composition">Modern Composition</a>
+    <a href="/list/opera">Opera</a>
+    <a href="/list/romantic">Romantic</a>
+    <a href="/list/impressionist">Impressionist</a>
+    <a href="/list/minimalism">Minimalism</a>
   </div>
 </div>
 
@@ -196,16 +201,19 @@
 
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 </style>
+
+<!-- POP -->
+
 <body>
 <div class="dropdown">
   <button class="dropbtn">Pop</button>
   <div class="dropdown-content">
-    <a href="#">Adult contemporary</a>
-    <a href="#">Worldbeat</a>
-    <a href="#">K-pop</a>
-    <a href="#">Europop</a>
-    <a href="#">Arab pop</a>
-    <a href="#">Folk pop</a>
+    <a href="/list/adult_contemperary">Adult contemporary</a>
+    <a href="/list/worldbeat">Worldbeat</a>
+    <a href="/list/k-pop">K-pop</a>
+    <a href="/list/europop">Europop</a>
+    <a href="/list/arabpop">Arab pop</a>
+    <a href="/list/folkpop">Folk pop</a>
   </div>
 </div>
 
