--- a/templates/swing_index.html
+++ b/templates/swing_index.html
@@ -12,7 +12,7 @@
     </div>
 
     <h1> Add a peice of music </h1>
-    <a href='/swing_songs/new'>New Swing Song</a>
+    <a href='/songs/new'>New Song</a>
     {% for swing_song in swing_songs %}
         <h2>{{ swing_song.title}}</h2>
         <small>{{ swing_song.description }}</small>
