Create, read, and delete are working. Edit is not accepting the URL. I still need to figure out how to add image files

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <title>Gig book</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
 
@@ -260,12 +260,12 @@
 <div class="dropdown">
   <button class="dropbtn">Hip Hop</button>
   <div class="dropdown-content">
-    <a href="#">Rap</a>
-    <a href="#">Lyrical Hip Hop</a>
-    <a href="#">New School Hip Hop</a>
-    <a href="#">Old School Rap</a>
-    <a href="#">Hyphy</a>
-    <a href="#">Dirty South</a>
+    <a href="/list/rap">Rap</a>
+    <a href="/list/lyrical_hip_hop">Lyrical Hip Hop</a>
+    <a href="/list/new_school_hip_hop">New School Hip Hop</a>
+    <a href="/list/old_school_rap">Old School Rap</a>
+    <a href="/list/hyphy">Hyphy</a>
+    <a href="/list/dirty_south">Dirty South</a>
   </div>
 </div>
 
@@ -312,12 +312,12 @@
 <div class="dropdown">
   <button class="dropbtn">Rock</button>
   <div class="dropdown-content">
-    <a href="#">Blues</a>
-    <a href="#">Hard Rock</a>
-    <a href="#">Metal</a>
-    <a href="#">Classic Rock</a>
-    <a href="#">Punk Rock</a>
-    <a href="#">Alternative Rock</a>
+    <a href="/list/blues">Blues</a>
+    <a href="list/hard_rock">Hard Rock</a>
+    <a href="list/metal">Metal</a>
+    <a href="list/classic_rock">Classic Rock</a>
+    <a href="list/punk_rock">Punk Rock</a>
+    <a href="list/alernitive_rock">Alternative Rock</a>
   </div>
 </div>
 
@@ -364,12 +364,12 @@
 <div class="dropdown">
   <button class="dropbtn">Country</button>
   <div class="dropdown-content">
-    <a href="#">Bluegrass</a>
-    <a href="#">Country Pop</a>
-    <a href="#">Rockabilly</a>
-    <a href="#">Western swing</a>
-    <a href="#">Americana</a>
-    <a href="#">Outlaw country</a>
+    <a href="/list/bluegrass">Bluegrass</a>
+    <a href="/list/country_pop">Country Pop</a>
+    <a href="/list/rockabilly">Rockabilly</a>
+    <a href="/list/western_swing">Western swing</a>
+    <a href="/list/americana">Americana</a>
+    <a href="/list/outlaw_country">Outlaw country</a>
 
   </div>
 </div>
