--- a/templates/songs_new.html
+++ b/templates/songs_new.html
@@ -62,6 +62,10 @@
 
                     </select>
 
+                <h1>Image of sheetmusic goes here</h1>
+
+
+
     </fieldset>
 
             <!-- BUTTON -->
