--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,6 +1,10 @@
-<h4 class='card-title'>{{ comment.title }}</h4>
-<p class='card-text'>{{ comment.content }}</p>
+<div class='card'>
+    <div class='card-block'>
+        <h4 class='card-title'>{{ comment.title }}</h4>
+        <p class='card-text'>{{ comment.content }}</p>
 
-<p><form method='POST' action='/detail/comments/{{ comment._id }}'>
-    <button class='btn btn-link' type='submit'> Delete</button>
-</form></p>
+        <p><form method='POST' action='/detail/comments/{{ comment._id }}'>
+            <button class='btn btn-link' type='submit'> Delete</button>
+        </form></p>
+    </div>
+</div>
