--- a/templates/comment_form.html
+++ b/templates/comment_form.html
@@ -1,7 +1,7 @@
 <!-- templates/comment_form.html -->
 
-<form action='/detail/{{ song._id }}/comments' methods='POST'> <!-- problum here -->
-    <input type='hidden' value='{{ song._id }}' name='song_id'
+<form action='/detail/comments' method='POST'>
+    <input type='hidden' value='{{ song._id }}' name='song_id'>
     <fieldset>
         <legend>Add a Comment</legend>
         <!-- Title -->
