--- a/templates/show.html
+++ b/templates/show.html
@@ -3,11 +3,14 @@
 
 {% block content %}
 
-
-<h1>Title: {{ song.title }}</h1>
-<h2>Composer: {{ song.composer}}</h2>
-<h3>Image of sheetmusic goes here</h3>
-
+<div class='row'>
+    <div class='col-sm-6 col-sm-offset-3'>
+        <h1>Title: {{ song.title }}</h1>
+        <h2>Composer: {{ song.composer}}</h2>
+        <h3>Image of sheetmusic goes here</h3>
+        <div class="card"><div class="card-body">
+            <img src="http://www.gamemusicthemes.com/sheetmusic/supernintendo/thelegendofzeldaalinktothepast/overworldtheme/The_Legend_of_Zelda_-_A_Link_to_the_Past_-_Overworld_Theme_Sheet_Music_by_w3sp_1.png" alt="sheetmusic">
+        </div></div>
 
 <!--Delete Button-->
 <p><form method='POST' action='/detail/{{ song._id }}/delete'>
@@ -20,8 +23,9 @@
 {% include 'comment_form.html'%}
 <br>
 
-{% for comment in coments %}
+{% for comment in comments %}
     {% include 'comment.html' %}
 {% endfor %}
-
+    </div>
+</div>
 {% endblock %}
