--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset='utf-8'>
     <title>Gig book</title>
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Bootstrap theme -->
+    <!--<link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">-->
+    
+    <!-- CSS stylesheet -->
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
