--- a/templates/show.html
+++ b/templates/show.html
@@ -8,9 +8,10 @@
         <h1>Title: {{ song.title }}</h1>
         <h2>Composer: {{ song.composer}}</h2>
         <h3>Image of sheetmusic goes here</h3>
-        <div class="card"><div class="card-body">
-            <img src="http://www.gamemusicthemes.com/sheetmusic/supernintendo/thelegendofzeldaalinktothepast/overworldtheme/The_Legend_of_Zelda_-_A_Link_to_the_Past_-_Overworld_Theme_Sheet_Music_by_w3sp_1.png" alt="sheetmusic">
-        </div></div>
+
+
+        <img src="https://cdn.shopify.com/s/files/1/0017/6760/4339/products/LZSPANKKKISATLOZLAMT_1024x.png?v=1529014429" alt="sheetmusic">
+
 
 <!--Delete Button-->
 <p><form method='POST' action='/detail/{{ song._id }}/delete'>
