--- a/templates/show.html
+++ b/templates/show.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 
+<div class='container'
 <div class='row'>
     <div class='col-sm-6 col-sm-offset-3'>
         <h1>Title: {{ song.title }}</h1>
@@ -28,5 +29,6 @@
     {% include 'comment.html' %}
 {% endfor %}
     </div>
+</div>
 </div>
 {% endblock %}
