--- a/templates/song_edit.html
+++ b/templates/song_edit.html
@@ -2,7 +2,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method='POST' action='/list'
+<form method='POST' action='/list'>
+    <input type='hidden' name='_method' value='PUT'/>
     <feildset>
         <legend>Edit Song</legend>
 
@@ -70,5 +71,5 @@
                             <button type="submit">Save Edit</button>
                         </p>
 
-        <h1>TEST</h1>
+
 {% endblock %}
