--- a/templates/base.html
+++ b/templates/base.html
@@ -13,377 +13,381 @@
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
-<div class='center'
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-    .dropbtn {
-      background-color: #4CAF50;
-      color: white;
-      padding: 16px;
-      font-size: 16px;
-      border: none;
-    }
+<div class='container'>
+    <div class='row'>
+        <div class='center'
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <style>
+            .dropbtn {
+              background-color: #4CAF50;
+              color: white;
+              padding: 16px;
+              font-size: 16px;
+              border: none;
+            }
 
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
+            .dropdown {
+              position: relative;
+              display: inline-block;
+            }
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f1f1f1;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-    }
+            .dropdown-content {
+              display: none;
+              position: absolute;
+              background-color: #f1f1f1;
+              min-width: 160px;
+              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+              z-index: 1;
+            }
 
-    .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
+            .dropdown-content a {
+              color: black;
+              padding: 12px 16px;
+              text-decoration: none;
+              display: block;
+            }
 
-    .dropdown-content a:hover {background-color: #ddd;}
+            .dropdown-content a:hover {background-color: #ddd;}
 
-    .dropdown:hover .dropdown-content {display: block;}
+            .dropdown:hover .dropdown-content {display: block;}
 
-    .dropdown:hover .dropbtn {background-color: #3e8e41;}
-    </style>
-    <body>
-    <div class="dropdown">
-      <button class="dropbtn"><a href="/">Home</a></button>
+            .dropdown:hover .dropbtn {background-color: #3e8e41;}
+            </style>
+            <body>
+            <div class="dropdown">
+              <button class="dropbtn"><a href="/">Home</a></button>
+            </div>
+
+            </body>
+
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        </style>
+        <body>
+
+        <!-- JAZZ -->
+
+        <div class="dropdown">
+          <button class="dropbtn">Jazz</button>
+          <div class="dropdown-content">
+            <a href="/list/swing">Swing</a>
+            <a href="/list/bebop">Bebop</a>
+            <a href="/list/big_band">Big Band</a>
+            <a href="/list/django">Django</a>
+            <a href="/list/latin">Latin</a>
+            <a href="/list/dixieland">Dixieland</a>
+
+          </div>
+        </div>
+
+        </body>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        </style>
+
+        <!-- Classical -->
+
+        <body>
+        <div class="dropdown">
+          <button class="dropbtn">Classical</button>
+          <div class="dropdown-content">
+            <a href="/list/baroque">Baroque</a>
+            <a href="/list/modern_composition">Modern Composition</a>
+            <a href="/list/opera">Opera</a>
+            <a href="/list/romantic">Romantic</a>
+            <a href="/list/impressionist">Impressionist</a>
+            <a href="/list/minimalism">Minimalism</a>
+          </div>
+        </div>
+
+        </body>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        </style>
+
+        <!-- POP -->
+
+        <body>
+        <div class="dropdown">
+          <button class="dropbtn">Pop</button>
+          <div class="dropdown-content">
+            <a href="/list/adult_contemperary">Adult contemporary</a>
+            <a href="/list/worldbeat">Worldbeat</a>
+            <a href="/list/k-pop">K-pop</a>
+            <a href="/list/europop">Europop</a>
+            <a href="/list/arabpop">Arab pop</a>
+            <a href="/list/folkpop">Folk pop</a>
+          </div>
+        </div>
+
+        </body>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        </style>
+        <body>
+        <div class="dropdown">
+          <button class="dropbtn">Hip Hop</button>
+          <div class="dropdown-content">
+            <a href="/list/rap">Rap</a>
+            <a href="/list/lyrical_hip_hop">Lyrical Hip Hop</a>
+            <a href="/list/new_school_hip_hop">New School Hip Hop</a>
+            <a href="/list/old_school_rap">Old School Rap</a>
+            <a href="/list/hyphy">Hyphy</a>
+            <a href="/list/dirty_south">Dirty South</a>
+          </div>
+        </div>
+
+        </body>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        </style>
+        <body>
+        <div class="dropdown">
+          <button class="dropbtn">Rock</button>
+          <div class="dropdown-content">
+            <a href="/list/blues">Blues</a>
+            <a href="list/hard_rock">Hard Rock</a>
+            <a href="list/metal">Metal</a>
+            <a href="list/classic_rock">Classic Rock</a>
+            <a href="list/punk_rock">Punk Rock</a>
+            <a href="list/alernitive_rock">Alternative Rock</a>
+          </div>
+        </div>
+
+        </body>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+        .dropbtn {
+          background-color: #4CAF50;
+          color: white;
+          padding: 16px;
+          font-size: 16px;
+          border: none;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f1f1f1;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+        }
+
+        .dropdown-content a:hover {background-color: #ddd;}
+
+        .dropdown:hover .dropdown-content {display: block;}
+
+        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        </style>
+        <body>
+        <div class="dropdown">
+          <button class="dropbtn">Country</button>
+          <div class="dropdown-content">
+            <a href="/list/bluegrass">Bluegrass</a>
+            <a href="/list/country_pop">Country Pop</a>
+            <a href="/list/rockabilly">Rockabilly</a>
+            <a href="/list/western_swing">Western swing</a>
+            <a href="/list/americana">Americana</a>
+            <a href="/list/outlaw_country">Outlaw country</a>
+
+          </div>
+        </div>
+
+        </body>
+
+        {% block content %}
+        BLOCK CONTENT
+        {% endblock %}
+        </div>
     </div>
-
-    </body>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-</style>
-<body>
-
-<!-- JAZZ -->
-
-<div class="dropdown">
-  <button class="dropbtn">Jazz</button>
-  <div class="dropdown-content">
-    <a href="/list/swing">Swing</a>
-    <a href="/list/bebop">Bebop</a>
-    <a href="/list/big_band">Big Band</a>
-    <a href="/list/django">Django</a>
-    <a href="/list/latin">Latin</a>
-    <a href="/list/dixieland">Dixieland</a>
-
-  </div>
-</div>
-
-</body>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-</style>
-
-<!-- Classical -->
-
-<body>
-<div class="dropdown">
-  <button class="dropbtn">Classical</button>
-  <div class="dropdown-content">
-    <a href="/list/baroque">Baroque</a>
-    <a href="/list/modern_composition">Modern Composition</a>
-    <a href="/list/opera">Opera</a>
-    <a href="/list/romantic">Romantic</a>
-    <a href="/list/impressionist">Impressionist</a>
-    <a href="/list/minimalism">Minimalism</a>
-  </div>
-</div>
-
-</body>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-</style>
-
-<!-- POP -->
-
-<body>
-<div class="dropdown">
-  <button class="dropbtn">Pop</button>
-  <div class="dropdown-content">
-    <a href="/list/adult_contemperary">Adult contemporary</a>
-    <a href="/list/worldbeat">Worldbeat</a>
-    <a href="/list/k-pop">K-pop</a>
-    <a href="/list/europop">Europop</a>
-    <a href="/list/arabpop">Arab pop</a>
-    <a href="/list/folkpop">Folk pop</a>
-  </div>
-</div>
-
-</body>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-</style>
-<body>
-<div class="dropdown">
-  <button class="dropbtn">Hip Hop</button>
-  <div class="dropdown-content">
-    <a href="/list/rap">Rap</a>
-    <a href="/list/lyrical_hip_hop">Lyrical Hip Hop</a>
-    <a href="/list/new_school_hip_hop">New School Hip Hop</a>
-    <a href="/list/old_school_rap">Old School Rap</a>
-    <a href="/list/hyphy">Hyphy</a>
-    <a href="/list/dirty_south">Dirty South</a>
-  </div>
-</div>
-
-</body>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-</style>
-<body>
-<div class="dropdown">
-  <button class="dropbtn">Rock</button>
-  <div class="dropdown-content">
-    <a href="/list/blues">Blues</a>
-    <a href="list/hard_rock">Hard Rock</a>
-    <a href="list/metal">Metal</a>
-    <a href="list/classic_rock">Classic Rock</a>
-    <a href="list/punk_rock">Punk Rock</a>
-    <a href="list/alernitive_rock">Alternative Rock</a>
-  </div>
-</div>
-
-</body>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-</style>
-<body>
-<div class="dropdown">
-  <button class="dropbtn">Country</button>
-  <div class="dropdown-content">
-    <a href="/list/bluegrass">Bluegrass</a>
-    <a href="/list/country_pop">Country Pop</a>
-    <a href="/list/rockabilly">Rockabilly</a>
-    <a href="/list/western_swing">Western swing</a>
-    <a href="/list/americana">Americana</a>
-    <a href="/list/outlaw_country">Outlaw country</a>
-
-  </div>
-</div>
-
-</body>
-
-{% block content %}
-BLOCK CONTENT
-{% endblock %}
 </div>
 </body>
 </html>
