--- a/templates/show.html
+++ b/templates/show.html
@@ -6,9 +6,9 @@
 <div class='container'
 <div class='row'>
     <div class='col-sm-6 col-sm-offset-3'>
-        <h1>Title: {{ song.title }}</h1>
-        <h2>Composer: {{ song.composer}}</h2>
-        <h3>Image of sheetmusic goes here</h3>
+        <h2>Title: {{ song.title }}</h2>
+        <h3>Composer: {{ song.composer}}</h3>
+        <h5>Image of sheetmusic goes here:</h5>
 
 
         <img src="https://cdn.shopify.com/s/files/1/0017/6760/4339/products/LZSPANKKKISATLOZLAMT_1024x.png?v=1529014429" alt="sheetmusic">
